Sutter Health/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monthly_Premium__c</fullName>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_closed_won_Opp__c</fullName>
        <label>No of closed won Opp</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notify_Sales_Manager__c</fullName>
        <defaultValue>TODAY() + 180</defaultValue>
        <description>Using for Strategic Marketing employer account to notify Sales Manager if there is no closed won opportunity
Used in Notify Sales Manager to remove workflow</description>
        <label>Notify Sales Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment__c</fullName>
        <label>Open Enrollment Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_lost__c</fullName>
        <label>Opportunities lost</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>SHMMN Opportunity, SHP Sales Opportunity</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDI_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_County__c</fullName>
        <label>Physical County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <label>Provider ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Sales__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVR</fullName>
                </value>
                <value>
                    <fullName>EBR</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>SSR</fullName>
                </value>
                <value>
                    <fullName>WBR North</fullName>
                </value>
                <value>
                    <fullName>WBR South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVR</fullName>
                </value>
                <value>
                    <fullName>EBR</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>SSR</fullName>
                </value>
                <value>
                    <fullName>WBR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Religious_Exemption_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Birth control coverage not provided due to religious exemption</inlineHelpText>
        <label>Religious Exemption Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retroactive_Billing_Period__c</fullName>
        <label>Retroactive Billing Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013 Q1</fullName>
                </value>
                <value>
                    <fullName>2013 Q2</fullName>
                </value>
                <value>
                    <fullName>2013 Q3</fullName>
                </value>
                <value>
                    <fullName>2013 Q4</fullName>
                </value>
                <value>
                    <fullName>2014 Q1</fullName>
                </value>
                <value>
                    <fullName>2014 Q2</fullName>
                </value>
                <value>
                    <fullName>2014 Q3</fullName>
                </value>
                <value>
                    <fullName>2014 Q4</fullName>
                </value>
                <value>
                    <fullName>2015 Q1</fullName>
                </value>
                <value>
                    <fullName>2015 Q2</fullName>
                </value>
                <value>
                    <fullName>2015 Q3</fullName>
                </value>
                <value>
                    <fullName>2015 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retroactive_Subscription_Period__c</fullName>
        <label>Retroactive Subscription Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013 Q1</fullName>
                </value>
                <value>
                    <fullName>2013 Q2</fullName>
                </value>
                <value>
                    <fullName>2013 Q3</fullName>
                </value>
                <value>
                    <fullName>2013 Q4</fullName>
                </value>
                <value>
                    <fullName>2014 Q1</fullName>
                </value>
                <value>
                    <fullName>2014 Q2</fullName>
                </value>
                <value>
                    <fullName>2014 Q3</fullName>
                </value>
                <value>
                    <fullName>2014 Q4</fullName>
                </value>
                <value>
                    <fullName>2015 Q1</fullName>
                </value>
                <value>
                    <fullName>2015 Q2</fullName>
                </value>
                <value>
                    <fullName>2015 Q3</fullName>
                </value>
                <value>
                    <fullName>2015 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Account_ID__c</fullName>
        <formula>CASE(  Type ,
&quot;Broker&quot;,&quot;B&quot;,
&quot;General Agent&quot;,&quot;B&quot;,
&quot;Employer&quot;,&quot;E&quot;,&quot;&quot;) &amp;  SFDC_Auto_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Auto_Number__c</fullName>
        <description>Auto-generated number that will be used to create a link between the SFDC record and the corresponding HealthRules record.</description>
        <displayFormat>A-{00000000}</displayFormat>
        <label>SFDC Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SHMMN_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SHMMN Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHMMN_Status__c</fullName>
        <label>SHMMN Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Meaningful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SHP_Active_Members__c</fullName>
        <label>Active Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Group_ID__c</fullName>
        <description>OTP Employer</description>
        <externalId>true</externalId>
        <label>Group ID #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_IN_Active_Members__c</fullName>
        <label>Inactive Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Opportunity_Status_Date__c</fullName>
        <defaultValue>TODAY() +30</defaultValue>
        <description>Req-3365: 
Notification Automation - Sales
 using in workflow</description>
        <label>Sent Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHP_Plan_Selection__c</fullName>
        <label>SHP Plan Selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>Req 3389
Re 3182 - HighRoads wave 2 - limiting the length to 4 characters</description>
        <label>SIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The owner of the Broker Firm Relationship</description>
        <label>Sales Team Relationship</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent_for_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent for Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceTabLabel__c</fullName>
        <description>This field is used for the tab label when a search result is selected in custom search.</description>
        <formula>if(CONTAINS(Name,&quot;&apos;&quot;), SUBSTITUTE(Name, &quot;&apos;&quot;, &quot;&quot;), Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceTabLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line_Product_Promotion__c</fullName>
        <label>Service Line/Product Promotion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bariatric</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Elder Care</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>Lung Nodule Clinic</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Occupational Medicine</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>SHP (Sutter Health Plus)</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Womens and Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Closed_Won_Opportunity__c</fullName>
        <label>Sold/ Closed Won Opportunity</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Strategic Marketing Employer</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Financially__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Override_Comment__c</fullName>
        <label>Status Override Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>SHP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>SHMMN Broker</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Un Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Subscriber HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Subscriber HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Account TIN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminate_Reason_Code__c</fullName>
        <label>Terminate Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <label>Total Members</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Reason_Code__c</fullName>
        <label>VIP Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Reason__c</fullName>
        <label>VIP Reason</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Tax_ID__c</fullName>
        <label>Vendor Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Financially__c</fullName>
        <description>Requirement -3358(Screen optimization for sales)
Updating for Individual Account</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Broker,General Agent</value>
        </filters>
        <label>All Brokers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHP_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Employers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SHP_Sales_Employer,Account.SHP_Sales_Employer_Read_Only</value>
        </filters>
        <label>All Employers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brokers_Contracted</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Broker,General Agent</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </filters>
        <label>Brokers - Contracted</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brokers_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Broker,General Agent</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>Brokers - Prospects</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employers_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Employer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>Employers - Prospects</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employers_Sold</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Employer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sold</value>
        </filters>
        <label>Employers - Sold</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>SHMMN_Broker_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SHMMN_Marketing_Broker</value>
        </filters>
        <label>SHMMN Broker Accounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHMMN_Employer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SHMMN_Marketing_Employer</value>
        </filters>
        <label>SHMMN Employer Accounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SHP_Sales_Broker,Account.SHP_Sales_Employer</value>
        </filters>
        <label>SHP Accounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Subscriber_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SHP_Subscriber</value>
        </filters>
        <label>All Subscribers</label>
    </listViews>
    <recordTypes>
        <fullName>Nav_Account</fullName>
        <active>true</active>
        <label>Nav Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <description>Record type for S3 Providers</description>
        <label>S3 Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider_Admin_Assistant</fullName>
        <active>true</active>
        <label>Provider Admin Assistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>S3_Employee</fullName>
        <active>true</active>
        <description>Record type for S3 Employees</description>
        <label>S3 Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>S3_Vendor</fullName>
        <active>true</active>
        <description>Record type for S3 Vendor</description>
        <label>S3 Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHMMN_Marketing_Broker</fullName>
        <active>true</active>
        <description>Record type for SHMMN Broker</description>
        <label>SHMMN Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHMMN_Marketing_Employer</fullName>
        <active>true</active>
        <description>Record type for SHMMN Employer</description>
        <label>SHMMN Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Broker_Firm</fullName>
        <active>false</active>
        <description>Record type for SHP Brokers</description>
        <label>SHP Broker Firm</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Employer</fullName>
        <active>false</active>
        <description>Record type for SHP Employer</description>
        <label>SHP Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Broker</fullName>
        <active>true</active>
        <label>SHP Sales Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Broker_Read_Only</fullName>
        <active>true</active>
        <label>SHP Sales Broker Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Employer</fullName>
        <active>true</active>
        <label>SHP Sales Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Employer_Read_Only</fullName>
        <active>true</active>
        <label>SHP Sales Employer Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Individual</fullName>
        <active>true</active>
        <label>SHP Sales Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Subscriber</fullName>
        <active>true</active>
        <description>Record type for SHP Subscriber</description>
        <label>SHP Subscriber</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <description>Record type for SHP Provider (Supplier)</description>
        <label>SHP Provider</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name_ReadOnly_on_ReadOnly_RecTyp</fullName>
        <active>true</active>
        <description>Will prevent users from modifying the standard Account Name field on the Read Only record types.  Will throw an error on SAVE.</description>
        <errorConditionFormula>ISCHANGED( Name) 
&amp;&amp; 
NOT ( ISNEW() ) 
&amp;&amp; 
(RecordType.Name = &quot;SHP Sales Broker Read Only&quot;
|| 
RecordType.Name = &quot;SHP Sales Employer Read Only&quot;)
&amp;&amp;
$Profile.Name != &quot;Integration&quot;</errorConditionFormula>
        <errorMessage>Account Name can only be modified in HealthRules</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_TIN_Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Tax_ID__c )), 
OR(AND( 
NOT(ISPICKVAL(Account_TIN_Type__c , &apos;EIN&apos;)), 
NOT(ISPICKVAL(Account_TIN_Type__c , &apos;Tax-ID&apos;)), 
RecordType.Name = &apos;SHP Sales Broker&apos; 
)))</errorConditionFormula>
        <errorDisplayField>Account_TIN_Type__c</errorDisplayField>
        <errorMessage>Account TIN Type Required when Account TIN is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Classification_as_Mandatory_for_Service</fullName>
        <active>true</active>
        <description>Used for Classification field to be mandatory if the Service line is selected as SHP</description>
        <errorConditionFormula>AND(If (INCLUDES( Service_Line_Product_Promotion__c , &apos;SHP (Sutter Health Plus)&apos;),true,false),  ISPICKVAL(Classification__c,&quot;&quot; ) )</errorConditionFormula>
        <errorMessage>Please select the Classification for SHP Service line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactGroup_No_Req_if_Status_Equal_Sold</fullName>
        <active>false</active>
        <description>Contact / Group # field is required when Status field is set to &quot;Sold&quot;.</description>
        <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;SHP Sales Broker&quot;,
RecordType.Name = &quot;SHP Sales Broker Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer&quot;,
RecordType.Name = &quot;SHP Sales Employer Read Only&quot;), 
ISPICKVAL(  Status__c , &quot;Sold&quot;), 
ISBLANK( Contact_Group_Number__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You have set the status as sold. Please provide a valid Contact / Group #.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>County_RollUp_Grt_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>County_Percent_Rollup__c&gt;1</errorConditionFormula>
        <errorMessage>For an Account Total Employee Distribution Percent cannot be more than 100%</errorMessage>
    </validationRules>
</CustomObject>